  Available in SQL editor's right mouse menu and tools popup (ctrl+T).

#598 Mac OS: Apple's application close command "Command key"+Q now works the same way as Ctrl+Q.
  I.e. Preferences are saved on "Command key"+Q.
  Furthermore the Apple specific About-Command now displays SQuirreL's About-box.
  NOTE: As a consequence of these changes the minimum required is Java 11.



Bug fixes:

Scripts Plugin: When scripting tables for MariaDB Decimal and Numeric columns where scripted without precision and scale.

Test button in Add Alias window didn't work when a new Alias was created.
  Note: The problem didn't occur when an existing Alias was copied.

#1475 Oracle Plugin: SGA-Trace/Session Info/Invalid objects windows:
  - Column widths changed on refresh
  - Columns are now sortable
  - Windows are opened centered on SQuirreL's main window and sizes are remembered.
  Thanks to Chris B for parts of the changes.

#1473 Unsaved changes dialog: Improved layout part two of 5/17/2021.
  Thanks to joel3576 for the changes.

#1473 Unsaved changes dialog: Improved layout.
  Thanks to joel3576 for parts of the changes.

Status bar: Fixed background color and improved breadcrumb navigation.

#1351 Clicking X in window "Properties for Alias: ..." is not really closing that window.

Graph Plugin: Copy and paste of Graph with no purely ASCII name raised "SAXParseException ...Invalid byte 2 of 3-byte UTF-8 sequence".

#1468 Single whitespace in driver properties are lost on application restart.
  This fix required replacing outdated nanoxml library by standard Java XML functionality.

#600 (in feature requests): For Oracle DB Sessions keywords in Objects tab weren't sorted correctly because of leading white spaces.

Command line interface (CLI):
  Fixed NullPointer in MetaDataTimeOutProxyFactory when executing SQL.


4.2.0 (04/05/2021)
==================

Enhancements:

Session status bar: Fixed coloring of Schema text field. See Alias properties window --> tab Color.
